ECL 10.5.1:
===========

* Bugs fixed:

 - Several autoconf tests in src/aclocal.in did not work when cross compiling.

 - ECL defines the feature LONG-LONG when this type is available in the
   C compiler.

 - When LIST, LIST*, and some other functions appeared as toplevel forms, the
   interpreter compiled its arguments also as toplevel forms, causing their
   execution in the wrong order.

 - EXT:MAKE-FOREIGN-DATA-FROM-ARRAY now supports all unboxed types.

 - ECL did not properly compute the alignment of foreign types in structures.
   This is now done using standard C constructs in a portable and robust way.

 - Even if a function was compiled with a given set of optimizations, a call
   to PROCLAIM which appeared after the function could change the value of
   those optimizations and influence what the emitted C code looked like.

* Visible changes:

 - "fasb" is now a valid FASL file type, accepted by ECL even in absence of
   ASDF.

 - EXT:GC ignores any argument passed to it.

 - ECL's compiler now understands the unboxed type :long-long.

 - A new special form, EXT:WITH-BACKEND allows us to select the code depending
   on whether it is going to be processed by the interpreter or by the C
   compiler.
      (defun example ()
        (ext:with-backend
          :bytecodes (print 3)
          :c/c++ (print 2)))
   The two currently available backends are :bytecodes and :c/c++.

 - Added accurate type proclamations for all functions in the ANSI CL
   specification.

 - The compiler is now shipped as a single FASL file, cmp.fas, without
   extra files such as sysfun.lsp

 - DECLAIM proclamation and toplevel DEFMACRO definitions do not propagate
   beyond the compiled file.

 - AREF/ASET can now be open-coded by the C compiler.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***